src/components/Story/Story.css
.story-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 42px 0px;
  text-align: center;
  padding: 24px 12px;
  background-color: #91a8d6;
}

.story-section .title {
  font-size: 42px;
  font-weight: 300;
  margin: 0px 0px 32px 0px;
  font-family: "Great Vibes", cursive;
  color: #243b6b;
}

.story-section .story-row {
  display: flex;
  flex-direction: row;
  width: 100%;
  min-height: 380px;
}

.story-section .story-column {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.story-section .item-left {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: stretch;
  padding: 0px 12px;
}

.story-section .item-right {
  padding: 0px 0px 32px 12px;
  flex: 1;
}

.story-section .item-left .icon-circle {
  width: 42px;
  height: 42px;
  border-radius: 50%;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.story-section .item-left .icon-circle img {
  width: 16px;
  height: 16px;
}

.story-section .item-left .line {
  width: 5px;
  flex-grow: 1;
  background-color: white;
}

.story-section .item-right .panel {
  background-color: white;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  text-align: justify;
  padding: 12px 16px;
  line-height: 24px;
}

.story-section .item-right .story-title {
  margin: 12px 0px;
  font-size: 14x;
}

.story-section .item-right .story-description {
  margin: 0px;
  font-size: 14px;
}

@media (min-width: 576px){
  .story-section{
    padding: 24px 32px;
  }
}
/*   
@media (max-width: 1024px){

}

@media (max-width: 768px){

}

@media (max-width: 769px){
  .story-section{
    padding: 24px 12px;
  }

  .story-section .title{
    margin-bottom: 24px;
    font-size: 42px;
  }

  .story-section .item-right{
    padding: 0px 0px 32px 12px;
  }

  .story-section .item-left .icon-circle{
    width: 32px; 
    height: 32px;
  }

  .story-section .item-left .icon-circle img{
    width: 12px;
    height: 12px;
  }

  .story-section .item-right .panel{
    padding: 12px 16px;
  }

  .story-section .item-right .story-title{
    margin: 12px 0px;
    font-size: 12px;
  }

  .story-section .item-right .story-description{
    margin: 0px;
    font-size: 12px;
  }
}
 */

